# AI_CAX_110_Capstone_Project

./: .gitignore  API_CONTRACTS.md  CLAUDE.md  DECISIONS.md  Dockerfile  PATTERNS.md  README.md  TROUBLESHOOTING.md  main.py  make-certs.sh  mysshkey  mysshkey.pub  pyproject.toml  railway.json  render.yaml  skills.md
.claude/: settings.json  settings.local.json
VOICE ENGINE/: .gitignore  README.md  VOICE_ENGINE_PLAN.md  pyproject.toml  requirements.txt
VOICE ENGINE/audio_tests/: english_input_4_sentences.txt  tagalog_output_4_sentences.txt
VOICE ENGINE/voice_engine/: __init__.py  config.py  exceptions.py  metrics.py  models.py  smoke_test.py
VOICE ENGINE/voice_engine/agents/: __init__.py  groq_client.py  languages.py  quality_review_agent.py  translation_agent.py
VOICE ENGINE/voice_engine/audio/: __init__.py  denoise.py  frames.py  jitter_buffer.py  vad.py
VOICE ENGINE/voice_engine/engines/: __init__.py  asr.py  guard.py  llm_translation.py  neural_tts.py  translation.py  tts.py  voice_clone.py
VOICE ENGINE/voice_engine/feedback/: __init__.py  llm_reviewer.py  translation_feedback.py
VOICE ENGINE/voice_engine/memory/: __init__.py  storage.py  translation_memory.py
VOICE ENGINE/voice_engine/pipeline/: __init__.py  direction.py  phrase_committer.py  room_orchestrator.py  session.py
VOICE ENGINE/voice_engine/text/: __init__.py  tagalog.py
VOICE ENGINE/voice_engine/transport/: __init__.py  interfaces.py
assets/: Sample Audio.m4a
backend/: admin_store.py  agent.py  conversation_history_store.py  email_service.py  main.py  memory_store.py  pricing.json  (+15 more)
(+18 files in other folders)
